Modifications de index.html, création de style.css

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1> Bienvenue sur le cours de R109</h1>
     <p>Ce site est une démo pour le cours R109 (développement web).</p>
-    
+    <h2>Nous allons voir le fonctionnement du html et de la publication sur Github</h2>
+    <p>Ceci est un paragraphe. </p>
 </body>
 </html>
