préparation du cv

--- a/index.html
+++ b/index.html
@@ -3,12 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Démo - R109</title>
+    <title>LECORNU Paul</title>
 </head>
 <body>
-    <h1> Bienvenue sur le cours de R109</h1>
-    <p>Ce site est une démo pour le cours R109 (développement web).</p>
-    <h2>Nous allons voir le fonctionnement du html et de la publication sur Github</h2>
-    <p>Ceci est un paragraphe. </p>
+    <h1>LECORNU Paul</h1>
+    <p>
+      <a href="photocv.png"
+        ><img src="photocv.png" alt="Ma photo" width="200" height="250"
+      /></a>
+        <br />
+      <a href="https://github.com/Molotov-141" target="_blank" 
+        >Profil Github
+      </a>
+      <h2>Compétences</h2>
+        <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Python</li>
+            <li>Minecraft command block</li>
+    </p>
 </body>
 </html>
