modification de l'index

--- a/index.html
+++ b/index.html
@@ -21,6 +21,19 @@
             <li>CSS</li>
             <li>Python</li>
             <li>Minecraft command block</li>
+        <h3>Expériences</h3>
+        <ul>
+            <li>Stage d'observation à Bayeux Intercom</li>
+            <li>Cours d'apprentissage de Python, de unity, de blender et de lstm avec Magic Makers</li>
+        </ul>
+        <h4>Centres d'intérêt</h4>
+        <ul>
+            <li>Informatique</li>
+            <li>Jeux vidéo</li>
+            <li>Lecture</li>
+            <li>Sport</li>
+            <li>Cuisine</li>
+            <li>Musique</li>
     </p>
 </body>
 </html>
