finalisation de la partie 1 du cv

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       /></a>
         <br />
       <a href="https://github.com/Molotov-141" target="_blank" 
-        >Profil Github
+        >Mon profil GitHub
       </a>
       <h2>Compétences</h2>
         <ul>
@@ -21,12 +21,12 @@
             <li>CSS</li>
             <li>Python</li>
             <li>Minecraft command block</li>
-        <h3>Expériences</h3>
+        <h2>Expériences</h2>
         <ul>
             <li>Stage d'observation à Bayeux Intercom</li>
-            <li>Cours d'apprentissage de Python, de unity, de blender et de lstm avec Magic Makers</li>
+            <li>Cours d'apprentissage de Python, de unity, de blender et de Low Short Term Memory (lstm) avec Magic Makers</li>
         </ul>
-        <h4>Centres d'intérêt</h4>
+        <h2>Centres d'intérêt</h2>
         <ul>
             <li>Informatique</li>
             <li>Jeux vidéo</li>
