--- a/index.html
+++ b/index.html
@@ -4,18 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LECORNU Paul</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <h1>LECORNU Paul</h1>
     <p>
-      <a href="photocv.png"
-        ><img src="photocv.png" alt="Ma photo" width="200" height="250"
-      /></a>
+        <div class="container">
+      <a href="Images/photocv.png"
+        ><img src="Images/photocv.png" alt="Ma photo" width="200" height="250" position="center"   margin-right="23px"/></a>
+        </div>
         <br />
-      <a href="https://github.com/Molotov-141" target="_blank" 
-        >Mon profil GitHub
-      </a>
-      <h2>Compétences</h2>
+        <h2>Compétences</h2>
         <ul>
             <li>HTML</li>
             <li>CSS</li>
@@ -35,5 +34,10 @@
             <li>Cuisine</li>
             <li>Musique</li>
     </p>
+
+
+    <a href="https://github.com/Molotov-141" target="_blank" 
+          ><img src="Images/logogithub.png" alt="Ma photo" width="30" height="30" position="center"   margin-right="23px"/>
+    </a>
 </body>
 </html>
